syntax = "proto3";
package lavanet.lava.subscription;

import "gogoproto/gogo.proto";
import "lavanet/lava/subscription/params.proto";
import "lavanet/lava/subscription/adjustment.proto";
import "lavanet/lava/fixationstore/fixation.proto";
import "lavanet/lava/timerstore/timer.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/lavanet/lava/v3/x/subscription/types";

// GenesisState defines the subscription module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  lavanet.lava.fixationstore.GenesisState subsFS = 2 [(gogoproto.nullable) = false];
  lavanet.lava.timerstore.GenesisState subsTS = 3 [(gogoproto.nullable) = false];
  lavanet.lava.fixationstore.GenesisState cuTrackerFS = 4 [(gogoproto.nullable) = false];
  lavanet.lava.timerstore.GenesisState cuTrackerTS = 5 [(gogoproto.nullable) = false];
  repeated Adjustment adjustments = 6 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
} 
